--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/node": "^16.18.35",
     "@types/react": "^18.2.9",
     "@types/react-dom": "^18.2.4",
+    "@types/react-image-gallery": "^1.2.0",
     "@types/redux-logger": "^3.0.9",
     "axios": "^1.4.0",
     "final-form": "^4.20.9",
@@ -25,8 +26,10 @@
     "primereact": "^9.5.0",
     "query-string": "^8.1.0",
     "react": "^18.2.0",
+    "react-carousel-minimal": "^1.4.1",
     "react-dom": "^18.2.0",
     "react-final-form": "^6.5.9",
+    "react-image-gallery": "^1.2.12",
     "react-redux": "^8.0.7",
     "react-router-dom": "^6.12.1",
     "react-scripts": "5.0.1",
