--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "query-string": "^8.1.0",
     "react": "^18.2.0",
     "react-carousel-minimal": "^1.4.1",
+    "react-device-detect": "^2.2.3",
     "react-dom": "^18.2.0",
     "react-final-form": "^6.5.9",
     "react-image-gallery": "^1.2.12",
